[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/gui/janela.png" type="Texture" id=1]
[ext_resource path="res://themes/optionTheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/adicionais tela mao/ButtonCarta.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/tela mao/Tela Mao Inicial.gd" type="Script" id=4]
[ext_resource path="res://fonts/SofiaSansCondensed-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/static/SofiaSansCondensed-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/static/SofiaSansCondensed-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/gui/icons/back.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 6 )

[node name="Tela Mao Inicial" type="Node2D"]
script = ExtResource( 4 )

[node name="Janela" type="Sprite" parent="."]
position = Vector2( 958, 540 )
scale = Vector2( 2.3617, 1 )
texture = ExtResource( 1 )

[node name="LabelTitulo" type="Label" parent="."]
margin_top = 43.0
margin_right = 1920.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Teste de Mão"
align = 1

[node name="LabelMulligan" type="Label" parent="."]
margin_top = 1004.0
margin_right = 916.0
margin_bottom = 1051.0
custom_fonts/font = SubResource( 1 )
text = "Clique nas Cartas que Deseja Trocar e Clique em \"Mulligan\""
align = 1

[node name="LabelDeck" type="Label" parent="."]
margin_top = 92.0
margin_right = 1920.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "AMAZONAS LF"
align = 1

[node name="OptionButtonJogador" type="OptionButton" parent="."]
margin_left = 1751.0
margin_top = 171.0
margin_right = 1900.0
margin_bottom = 204.0
theme = ExtResource( 2 )
text = "Primeiro Jogador"
items = [ "Primeiro Jogador", null, false, 0, null, "Segundo Jogador", null, false, 1, null ]
selected = 0

[node name="MaoInicial" type="Node2D" parent="." groups=["mao"]]

[node name="ButtonCarta" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 30.0
margin_top = 170.0
margin_right = 320.0
margin_bottom = 570.0

[node name="ButtonCarta2" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 330.0
margin_top = 170.0
margin_right = 620.0
margin_bottom = 570.0

[node name="ButtonCarta3" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 630.0
margin_top = 170.0
margin_right = 920.0
margin_bottom = 570.0

[node name="ButtonCarta4" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 30.0
margin_top = 600.0
margin_right = 320.0
margin_bottom = 1000.0

[node name="ButtonCarta5" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 330.0
margin_top = 600.0
margin_right = 620.0
margin_bottom = 1000.0

[node name="ButtonCarta6" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 630.0
margin_top = 600.0
margin_right = 920.0
margin_bottom = 1000.0

[node name="ButtonCarta7" parent="MaoInicial" instance=ExtResource( 3 )]
visible = false
margin_left = 930.0
margin_top = 170.0
margin_right = 1220.0
margin_bottom = 570.0

[node name="ButtonMulligan" type="Button" parent="."]
margin_left = 1630.0
margin_top = 168.0
margin_right = 1714.0
margin_bottom = 206.0
theme = ExtResource( 2 )
text = "Mulligar"

[node name="ButtonNovaMao" type="Button" parent="."]
margin_left = 1495.0
margin_top = 168.0
margin_right = 1591.0
margin_bottom = 206.0
theme = ExtResource( 2 )
text = "Nova Mão"

[node name="CardDestaque" type="RichTextLabel" parent="."]
margin_left = 1362.0
margin_top = 377.0
margin_right = 1914.0
margin_bottom = 1038.0
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b] Passe o mouse na carta para ver a descrição [/b]

Teste as várias simulações de Mão Inicial e Mulligan
"
text = " Passe o mouse na carta para ver a descrição 

Teste as várias simulações de Mão Inicial e Mulligan
"

[node name="ButtonVoltar" type="TouchScreenButton" parent="."]
self_modulate = Color( 0.364706, 0.254902, 1, 1 )
position = Vector2( 33, 35 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 8 )

[connection signal="item_selected" from="OptionButtonJogador" to="." method="_on_OptionButtonJogador_item_selected"]
[connection signal="pressed" from="ButtonMulligan" to="." method="mulligar"]
[connection signal="pressed" from="ButtonNovaMao" to="." method="_on_ButtonNovaMao_pressed"]
[connection signal="pressed" from="ButtonVoltar" to="." method="_on_ButtonVoltar_pressed"]
